<resources>
    <string name="app_name">Gear6</string>
    <string name="title_home">Home</string>
    <string name="title_gauges">Gauges</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main">Gear6</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">Vehicle Name / Vehicle Description</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">FAQ</string>
    <string name="action_settings2">Manual</string>
    <string name="title_activity_snapshot_detail">SnapshotDetailActivity</string>
    <string name="obd2_param_rpm">RPM</string>
    <string name="obd2_param_absoluteLoad">Absolute Load</string>
    <string name="obd2_param_Load">Load</string>
    <string name="obd2_param_massAirFlow">Mass Air Flow</string>
    <string name="obd2_param_oilTemperature">Oil Temperature</string>
    <string name="obd2_param_relativeThrottlePosition">Relative Throttle Position</string>
    <string name="obd2_param_throttlePosition">Throttle Position</string>
    <string name="obd2_param_speed">Speed</string>
    <string name="obd2_param_airFuelRatio">Air Fuel Ratio</string>
    <string name="obd2_param_consumptionRate">Consumption Rate</string>
    <string name="obd2_param_fuelLevel">Fuel Level</string>
    <string name="obd2_param_fuelTrim">Fuel Trim</string>
    <string name="obd2_param_widebandAirFuelRatio">Wideband Air Fuel Ratio</string>
    <string name="obd2_param_barometricPressure">Barometric Pressure</string>
    <string name="obd2_param_fuelPressure">Fuel Pressure</string>
    <string name="obd2_param_fuelRailPressure">Fuel Rail Pressure</string>
    <string name="obd2_param_intakeManifoldPressure">Intake Manifold Pressure</string>
    <string name="obd2_param_airIntakeTemperature">Air Intake Temperature</string>
    <string name="obd2_param_ambientAirTemperature">Ambient Air Temperature</string>
    <string name="obd2_param_engineCoolantTemperature">Engine Coolant Temperature</string>
</resources>
