<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".activities.SelectDataToFetchActivity">
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/beginCaptureButton" android:animateLayoutChanges="true">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:animateLayoutChanges="true">
            <TextView
                    android:text="Engine (tap to contract)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/engineSubHeader" android:textSize="18sp"
            />
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                          android:orientation="vertical" android:id="@+id/engineList" android:visibility="visible">
                <CheckBox
                        android:text="@string/obd2_param_rpm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/rpmCheckBox" android:textSize="14sp"
                        android:checked="false"/>
                <CheckBox
                        android:text="@string/obd2_param_absoluteLoad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/absoluteLoadCheckBox"
                        android:textSize="14sp"/>
                <CheckBox
                        android:text="@string/obd2_param_Load"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/loadCheckBox"
                        android:textSize="14sp"/>
                <CheckBox
                        android:text="@string/obd2_param_massAirFlow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/massAirFlowCheckBox"
                        android:textSize="14sp"/>
                <CheckBox
                        android:text="@string/obd2_param_oilTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/oilTemperatureCheckBox"
                        android:textSize="14sp"/>
                <CheckBox
                        android:text="@string/obd2_param_relativeThrottlePosition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/relativeThrottlePositionCheckBox"
                        android:textSize="14sp"/>
                <CheckBox
                        android:text="@string/obd2_param_throttlePosition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/throttlePositionCheckBox"
                        android:textSize="14sp"/>
                <CheckBox
                        android:text="@string/obd2_param_speed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/speedCheckBox"
                        android:textSize="14sp"/>
            </LinearLayout>
            <TextView
                    android:text="Fuel (tap to contract)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/fuelSubHeader" android:textSize="18sp"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                          android:orientation="vertical" android:id="@+id/fuelList" android:visibility="visible">
                <CheckBox
                        android:text="@string/obd2_param_airFuelRatio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/airFuelRatioCheckBox"
                        android:textSize="14sp"/>
                <CheckBox
                        android:text="@string/obd2_param_consumptionRate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/consumptionRateCheckBox"
                        android:textSize="14sp"/>
                <CheckBox
                        android:text="@string/obd2_param_fuelLevel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/fuelLevelCheckBox"
                        android:textSize="14sp"/>
                <CheckBox
                        android:text="@string/obd2_param_fuelTrim"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/fuelTrimCheckBox"
                        android:textSize="14sp"/>
                <CheckBox
                        android:text="@string/obd2_param_widebandAirFuelRatio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/widebandAirFuelRatioCheckBox"
                        android:textSize="14sp"/>
            </LinearLayout>
            <TextView
                    android:text="Pressure (tap to contract)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/pressureSubHeader" android:textSize="18sp"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                          android:orientation="vertical" android:id="@+id/pressureList" android:visibility="visible">
                <CheckBox
                        android:text="@string/obd2_param_barometricPressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/barometricPressureCheckBox"
                        android:textSize="14sp"/>
                <CheckBox
                        android:text="@string/obd2_param_fuelPressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/fuelPressureCheckBox"
                        android:textSize="14sp"/>
                <CheckBox
                        android:text="@string/obd2_param_fuelRailPressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/fuelRailPressureCheckBox"
                        android:textSize="14sp"/>
                <CheckBox
                        android:text="@string/obd2_param_intakeManifoldPressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/intakeManifoldPressureCheckBox"
                        android:textSize="14sp"/>
            </LinearLayout>
            <TextView
                    android:text="Temperature (tap to contract)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/temperatureSubHeader"
                    android:textSize="18sp"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                          android:orientation="vertical" android:id="@+id/temperatureList" android:visibility="visible">
                <CheckBox
                        android:text="@string/obd2_param_airIntakeTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/airIntakeTemperatureCheckBox"
                        android:textSize="14sp"/>
                <CheckBox
                        android:text="@string/obd2_param_ambientAirTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/ambientAirTemperatureCheckBox"
                        android:textSize="14sp"/>
                <CheckBox
                        android:text="@string/obd2_param_engineCoolantTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/engineCoolantTemperatureCheckBox"
                        android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <TextView
            android:text="Select Data To Retrieve From OBDII"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:textSize="24sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="Estimated storage used per minute:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="@+id/textView6"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:visibility="invisible"/>
    <Button
            android:text="Begin Capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/beginCaptureButton"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
    />
    <Button
            android:text="Go Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/goBackButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dataEstimateValue" app:layout_constraintStart_toEndOf="@+id/textView7"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView7" android:visibility="invisible"/>
</android.support.constraint.ConstraintLayout>